feat: add Reids, complete patrols status put status and location - TODO: authentication needs to be finish as well as downsampling location push from redis/intermedia to postgres
